rust/foxglove/src/protocol/common/client/snapshots/foxglove__protocol__common__client__get_parameters__tests__encode.snap
---
source: rust/foxglove/src/protocol/common/client/get_parameters.rs
expression: message()
---
{
  "op": "getParameters",
  "parameterNames": [
    "param1",
    "param2"
  ]
}
