rust/foxglove/src/protocol/common/client/snapshots/foxglove__protocol__common__client__get_parameters__tests__encode_with_id.snap
---
source: rust/foxglove/src/protocol/common/client/get_parameters.rs
expression: message_with_id()
---
{
  "op": "getParameters",
  "parameterNames": [
    "param1",
    "param2"
  ],
  "id": "my-id"
}
